Adding Post to web

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,6 @@
-<a href="#" class="btn btn-primary">Find me in app/views/home/index.html.erb</a>
+<div class="center hero-unit">
+  <h1>Welcome World!</h1>
+
+  <%= link_to "My blog",posts_path, :class =>"btn btn-large center btn-primary" %>
+</div>
+
