--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<body class="hero-unit">
 <p>
   <b>Name:</b>
   <%= @post.name %>
@@ -15,6 +15,11 @@
   <%= @post.content %>
 </p>
 
+<h2>Comments</h2>
+<%= render @post.comments %>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<h2>Add a comment</h2>
+<%= render "comments/form" %>
+
+<%= link_to 'Edit', edit_post_path(@post), :class =>"btn-primary btn-large" %>
+<%= link_to 'Back', posts_path, :class =>"btn-primary btn-large" %>
