--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="center hero-unit">
   <h1>Welcome World!</h1>
 
-  <%= link_to "My blog",posts_path, :class =>"btn btn-large center btn-primary" %>
+  <%= link_to "Go te see the posts",posts_path, :class =>"btn btn-large btn-primary" %>
 </div>
 
