--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing posts</h1>
-
-<table>
+<body class="hero-unit">
+<table class="table table-striped">
   <tr>
     <th>Name</th>
     <th>Title</th>
@@ -15,13 +15,14 @@
     <td><%= post.name %></td>
     <td><%= post.title %></td>
     <td><%= post.content %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Show', post , :class => "btn btn-info" %></td>
+    <td><%= link_to 'Edit', edit_post_path(post), :class => "btn btn-success" %></td>
+    <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete, :class => "btn btn-danger" %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path, :class => "btn btn-primary" %>
+</body>
