--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="hero-unit">
 <h1>Editing post</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Show', @post, :class => "btn btn-info" %> 
+<%= link_to 'Back', posts_path, :class =>"btn btn-primary" %>
+</div>
