--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New post</h1>
+<div class="hero-unit">
+<h2>New post</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path, :class => "btn btn-primary large" %>i
+</div>
