--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,34 @@
-<% @users.each do |s| %>
-  <%= s.name %>
-  <%= s.password %>
-<% end %>
+<%= notice %>
+<div class="hero-unit">
+  <h2>
+      Users List
+      <%= link_to "Create New User",new_user_path, :class => "btn btn-primary pull-right" %>
+  </h2>   
+  <table class="table table-strip ">
+    <thead>
+      <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>User Name</th>
+      <th>Email Address</th>
+      <th>Password</th>
+      <th>Operation</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |u| %>
+      <tr>
+        <td></td>
+        <td></td>
+        <td><%= link_to u.name,u %></td>
+        <td></td>
+        <td><%= u.password%></td>
+        <td>
+          <%= link_to "Edit", "#", :class => "btn btn-info" %>
+          <%= link_to "Delete","#", :class => "btn btn-danger" %>
+        </td>
+      <% end %>
+      </tbody>
+    </table>
+    <%= link_to "Home",'/', :class => "btn btn-large btn-primary" %>
+</div>
