--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <p>
   <b>Commenter:</b>
-  <%= comment.commenter %>
+  <%= link_to comment.commenter, user_path(comment.users_id) %>
 </p>
 
 <p>
@@ -12,7 +12,7 @@
   <%= link_to 'Delete Comment',[comment.post,comment],
               :confirm => 'Are you sure you want to delete this comment?',
               :method => :delete, 
-              :class => "btn-primary btn-small" %>
+              :class => "btn-primary btn-small btn " %>
 </p>
 
 
