--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,4 @@
-<%= form_for @user do |f| %>
-  <%= f.text_field :name %>
-  <%= f.password_field :password %>
-  <%= f.submit %>
-<% end %>
+<div class="hero-unit">
+  <h2>New User</h2>
+  <%= render :partial =>"form" %>
+</div>
