--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,30 @@
+<div class="hero-unit">
+  <table class="table table-striped table-condensed">
+    <thead>
+      <
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Username</th>
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <%= @user.name %><br/>
-<%= @user.password %>
+<%= @user.password %><br/>
+<% @user.posts.each do |p| %>
+  <br/> <%= p.content %>
+<% end %>
+</div>
