--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,5 @@
-<%safs>
+<div class="hero-unit">
+  <h2>Edit User</h2>
+  <%= render :partial => "form" %>
+  <%= link_to "Back", users_path, :class=> "btn btn-primary" %>
+</div>
