--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,11 +24,12 @@
         <td></td>
         <td><%= u.password%></td>
         <td>
-          <%= link_to "Edit", "#", :class => "btn btn-info" %>
-          <%= link_to "Delete","#", :class => "btn btn-danger" %>
+          <%= link_to "Edit", edit_user_path(u), :class => "btn btn-info" %>
+          <%= link_to "Delete",u,:method =>:delete, :class => "btn btn-danger" %>
         </td>
       <% end %>
       </tbody>
     </table>
     <%= link_to "Home",'/', :class => "btn btn-large btn-primary" %>
-</div>
+    <%= will_paginate  %>
+  </div>
